create matches completed

--- a/Tourny_app/templates/matches/index.html
+++ b/Tourny_app/templates/matches/index.html
@@ -10,7 +10,7 @@
   </tr>
   {% for match in matches %}
   <tr>
-    <td>Match id:{{match.id}}  Player 1 id:{{match.player1_id}}  Player 2 id:{{match.player2_id}}  Result: {{match.result}}</td>
+    <td>Match id:{{match.id}} Player 1:{{match.player1_id}}  Player 2:{{match.player2_id}}  Result: {{match.result}}</td>
   </tr>
   {% endfor %}
 </table>
