--- a/Tourny_app/templates/matches/show.html
+++ b/Tourny_app/templates/matches/show.html
@@ -6,4 +6,6 @@
 <h3>Player 1: {{match.player1_id}}</h3> 
 <h3>Player 2: {{match.player2_id}}</h3>
 <h3>Result: {{match.result}}</h3>
+<h3><button name="win1" value="1">Win</button></h3>
+<h3><button name="win2" value="2">Win</button></h3>
 {% endblock %}
