--- a/Tourny_app/templates/index.html
+++ b/Tourny_app/templates/index.html
@@ -1,7 +1,10 @@
 {% extends 'base.html'%}
 
 {% block content %}
-<h2>Test this works?</h2>
-
-<p>Play a match!</p>
+<div>
+    <a href="http://localhost:5000/players/newplayer">Add Player</a>
+</div>
+<div>
+    <a href="http://localhost:5000/matches/create">Create Match</a>
+</div>
 {% endblock %}
