--- a/Tourny_app/templates/base.html
+++ b/Tourny_app/templates/base.html
@@ -1,16 +1,35 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
   <title>Tourny App</title>
-
 </head>
 <body>
-    <h1>Tourny App</h1>
+  <div class="grid-container">
+    <div><a href="http://localhost:5000">Home</a></div>
+    <div><a href="http://localhost:5000/players">Players</a></div>
+    <div><a href="http://localhost:5000/matches">Matches</a></div>
+    <div class="grid-item3"> Item 3 </div>
+    <div class="grid-item4"> Item 4 </div>
+    <div class="grid-item5"> Item 5 </div>
+    <div class="grid-item6"> Item 6 </div>
+    <div class="grid-item7"> Item 7 </div>
+    <div class="grid-item8"> Item 8 </div>
+    <div class="grid-item9"> Item 9 </div>
+  </div>
+
   <section>
       {% block content %}
 
       {% endblock%}
   </section>
-  
+
 </body>
 </html>
+
+
+
+
