--- a/Tourny_app/templates/base.html
+++ b/Tourny_app/templates/base.html
@@ -8,18 +8,22 @@
   <title>Tourny App</title>
 </head>
 <body>
-  <div class="grid-container">
-    <div><a href="http://localhost:5000">Home</a></div>
-    <div><a href="http://localhost:5000/players">Players</a></div>
-    <div><a href="http://localhost:5000/matches">Matches</a></div>
-    <div class="grid-item3"> Item 3 </div>
-    <div class="grid-item4"> Item 4 </div>
-    <div class="grid-item5"> Item 5 </div>
-    <div class="grid-item6"> Item 6 </div>
-    <div class="grid-item7"> Item 7 </div>
-    <div class="grid-item8"> Item 8 </div>
-    <div class="grid-item9"> Item 9 </div>
-  </div>
+    <header>
+      <h1 class="header">Tourny</h1>
+    </header>
+
+    <menu>
+      <a href="http://localhost:5000">Home</a>
+    </menu>
+    <menu>
+      <a href="http://localhost:5000/players">Players</a>
+    </menu>
+    <menu>
+      <a href="http://localhost:5000/matches">Matches</a>
+    </menu>
+    <menu></menu>
+    <menu></menu>
+    <menu></menu>
 
   <section>
       {% block content %}
