--- a/Tourny_app/templates/matches/show.html
+++ b/Tourny_app/templates/matches/show.html
@@ -5,7 +5,7 @@
 
 <h3>Player 1: {{match['player1'].name}}</h3> 
 <h3>Player 2: {{match['player2'].name}}</h3>
-<h3>Result: {{match['match'].result}}</h3>
+<h3>Result: {{winner}}</h3>
 <h3><a href="http://localhost:5000/matches/{{match['match'].id}}/p1w">Player 1 wins</a></h3>
 <h3><a href="http://localhost:5000/matches/{{match['match'].id}}/p2w">Player 2 wins</a></h3>
 {% endblock %}
