--- a/Tourny_app/templates/matches/index.html
+++ b/Tourny_app/templates/matches/index.html
@@ -13,7 +13,8 @@
     <td>Match : {{match['match'].id}}</td>
     <td>Player 1: {{match['player1'].name}}</td>
     <td>Player 2: {{match['player2'].name}}</td>
-    <td>Winner : {{match['match'].result}}</td>
+    <td>Winner : {{match['result']}}</td>
+    <td></td>
   </tr>
   {% endfor %}
 </table>
