--- a/Tourny_app/static/style.css
+++ b/Tourny_app/static/style.css
@@ -5,13 +5,13 @@ body {
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
     grid-template-areas: "header header header header header header"
         "menu menu menu menu menu menu"
-        ". main main main main ."
+        "main main main main main ."
         "footer footer footer footer footer footer";
 }
 
 h1 {
     margin-top: 25px;
-    margin-left: 25px;
+    margin-left: 4.5%;
     font-size: 4em;
     color: #DA0037;
 }
@@ -23,20 +23,68 @@ h2 {
 }
 
 header {
+    font-family: 'Archivo', sans-serif;
+    font-style: italic;
     grid-area: header;
     background-color: #171717;
     
 }
 
 menu {
+    padding-top: 10px;
+    font-family: 'Archivo', sans-serif;
+    font-style: normal;
     font-size: 2em;
+    text-align: center;
     color: #EDEDED;
     margin: 0;
     background-color: #444444;
+    padding: 0;
+}
 
-
+menu a {
+    text-decoration: none;
+    vertical-align: sub;
 }
 
 menu a:visited{
     color: #EDEDED;
+}
+
+main {
+    grid-area: main;
+    min-height: 500px;
+    margin-left: 75px;
+    margin-top: 30px;
+    font-family: 'Archivo', sans-serif;
+    color: #171717;
+}
+
+
+.main_index {
+    font-size: 2em;
+    line-height: 2;
+}
+
+main a {
+    text-decoration: none;
+    color: #171717
+}
+
+main a:visited{
+    color: #171717;
+}
+
+main h1 {
+    margin-top: 0px;
+    margin-left: 0;
+}
+
+
+
+footer {
+    font-family: 'Archivo', sans-serif;
+    font-style: italic;
+    grid-area: footer;
+    background-color: #171717;
 }
