--- a/Tourny_app/templates/base.html
+++ b/Tourny_app/templates/base.html
@@ -5,6 +5,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,700;1,900&display=swap" rel="stylesheet">
   <title>Tourny App</title>
 </head>
 <body>
@@ -24,13 +27,14 @@
     <menu></menu>
     <menu></menu>
     <menu></menu>
-
-  <section>
+    <main>
       {% block content %}
 
       {% endblock%}
-  </section>
-
+    </main>  
+    <footer>
+      <h1 class="header">Tourny</h1>
+    </footer>
 </body>
 </html>
 
