--- a/Tourny_app/static/style.css
+++ b/Tourny_app/static/style.css
@@ -84,10 +84,10 @@ table a {
 }
 
 .main_index {
-    font-style: None;
-    font-size: 3em;
+    font-style: italic;
+    font-size: 3.5em;
     line-height: 1.6;
-    font-weight: normal;
+    font-weight: bold;
 }
 
 main a {
